lab7 done